<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_1"
            android:icon="@drawable/home"
            android:title="@string/title_section_1"/>
        <item
            android:id="@+id/nav_2"
            android:icon="@drawable/explore"
            android:title="@string/title_section_2"/>
        <item
            android:id="@+id/nav_3"
            android:icon="@drawable/discover"
            android:title="@string/title_section_3"/>
        <item
            android:id="@+id/nav_4"
            android:icon="@drawable/plan"
            android:title="@string/title_section_4"/>

        <item
            android:id="@+id/nav_5"
            android:icon="@drawable/shop"
            android:title="@string/title_section_5"/>
        <item
            android:id="@+id/nav_6"
            android:icon="@drawable/build"
            android:title="@string/title_section_6"/>
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_7"
                android:icon="@drawable/settings"
                android:title="@string/title_section_7"/>
            <item
                android:id="@+id/nav_8"
                android:icon="@drawable/profile"
                android:title="@string/title_section_8"/>
        </menu>
    </item>

</menu>
